deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: documentserver
  name: documentserver
  namespace: onlyoffice
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: docker/default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: documentserver
    spec:
      # allow container PID to run as root
      securityContext:
        runAsNonRoot: false
      containers:
      - name: documentserver
          # Registry location, container name and version
        image: onlyoffice/documentserver
        imagePullPolicy: Always
        resources:
          # CPU & memory allocations
          limits:
            cpu: 500m
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 1250Mi
        # Readiness & Liveness Health Checks
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthcheck
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 5
          tcpSocket:
            port: 80
          initialDelaySeconds: 200
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /var/www/onlyoffice/Data 
          name: onlyoffice-documentserver-data
        - mountPath: /var/log/onlyoffice
          name: onlyoffice-documentserver-data
      volumes:
      - name: onlyoffice-documentserver-data
        persistentVolumeClaim: 
          claimName: onlyoffice-documentserver-claim
